@@ -1,3 +1,9 @@
+2010-02-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/std/limits: Implement resolution of DR 559 (CD1) in
+	C++0x mode.
+	* testsuite/18_support/numeric_limits/dr559.cc: New.
+
 2010-02-16  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* src/ios_locale.cc: Fixes for -pedantic.
